frontend/test/should_fail/uniqueofEdge.grg
using uniqueTestModelWithoutUniqueDeclarations;

rule t
{
	-e:Edge->;
	if { uniqueof(e)==42; }
	
	modify {
	}
}
